@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-08-15T16:09:17Z",
-  "count" : 9,
-  "count_minmax" : [ 7, 9 ],
-  "count_decinc" : [ -0, +9 ],
+  "timestamp" : "2023-08-16T00:34:19Z",
+  "count" : 10,
+  "count_minmax" : [ 7, 10 ],
+  "count_decinc" : [ -0, +10 ],
   "uniques" : 8,
   "uniques_minmax" : [ 6, 8 ],
   "uniques_decinc" : [ -0, +8 ]
