@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-08-15T16:09:17Z",
+  "timestamp" : "2023-08-16T00:34:19Z",
   "count_outdated" : 4888,
   "uniques_outdated" : 1446,
-  "count" : 5028,
+  "count" : 5029,
   "uniques" : 1544,
   "clones" : [
     {
@@ -115,9 +115,9 @@
     },
     {
       "timestamp": "2023-08-15T00:00:00Z",
-      "count": 9,
-      "count_minmax": [ 7, 9 ],
-      "count_decinc": [ 0, 9 ],
+      "count": 10,
+      "count_minmax": [ 7, 10 ],
+      "count_decinc": [ 0, 10 ],
       "uniques": 8,
       "uniques_minmax": [ 6, 8 ],
       "uniques_decinc": [ 0, 8 ]
